# physics-engine-comparison

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: README.md
include/: arena.h  ecs_optimized.h  ecs_simulation.h  oop_simulation.h  sparse_set.h
src/: arena.c  bouncing_ball.cc  bouncing_ball_mt.cc  bouncing_ball_oop.cc  ecs_optimized.cc  ecs_simulation.cc  main.cc  oop_simulation.cc  sparse_set.cc
